- Fixed bug #47593 (interface_exists() returns false when using absolute namespace path)   Patch by Kalle.